# snab

./: .gitignore  LICENSE  README.md  bang.nim  glfanim.nim  snab.nim
app/: CMakeLists.txt  build.gradle  version.nims
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/org/example/snab/: Snab.java
app/src/main/res/values/: strings.xml
